@@ -33,7 +33,7 @@
         <spring-cloud.version>2023.0.1</spring-cloud.version>
         <jjwt.version>0.12.3</jjwt.version>
         <springdoc.version>2.3.0</springdoc.version>
-        <lombok.version>1.18.38</lombok.version>
+        <lombok.version>1.18.46</lombok.version>
         <testng.version>7.9.0</testng.version>
         <testcontainers.version>1.20.4</testcontainers.version>
         <argLine></argLine>
@@ -114,8 +114,19 @@
             <dependency>
                 <groupId>org.mockito</groupId>
                 <artifactId>mockito-core</artifactId>
-                <version>5.11.0</version>
+                <version>5.23.0</version>
                 <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy</artifactId>
+                <version>1.18.10-jdk5</version>
+            </dependency>
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy-agent</artifactId>
+                <version>1.18.10-jdk5</version>
             </dependency>
 
             <!-- TestNG -->
@@ -173,13 +184,13 @@
                         </dependency>
                     </dependencies>
                     <configuration>
-                        <argLine>@{argLine} --enable-preview -Dnet.bytebuddy.experimental=true</argLine>
+                        <argLine>@{argLine} --enable-preview -Dnet.bytebuddy.experimental=true -Djdk.attach.allowAttachSelf=true -XX:+EnableDynamicAgentLoading</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.8.12</version>
+                    <version>0.8.15</version>
                     <executions>
                         <execution>
                             <goals><goal>prepare-agent</goal></goals>
